--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "license": "Unlicense",
   "private": true,
   "dependencies": {
-    "connect": "^3.2.0",
-    "js-yaml": "^3.3.0",
-    "swagger-tools": "0.10.1"
+    "connect": "^3.6.6",
+    "js-yaml": "^3.13.1",
+    "pg": "^7.10.0",
+    "swagger-tools": "^0.10.1"
   }
 }
