--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Welcome to the nodejs backend of Booboky!",
   "main": "index.js",
   "scripts": {
-    "prestart": "npm install",
-    "start": "node index.js"
+	"prestart": "npm install",
+	"start": "node index.js"
   },
   "keywords": [
     "swagger"
@@ -13,9 +13,8 @@
   "license": "Unlicense",
   "private": true,
   "dependencies": {
-    "connect": "^3.6.6",
-    "js-yaml": "^3.13.1",
-    "pg": "^7.10.0",
-    "swagger-tools": "^0.10.1"
+    "connect": "^3.2.0",
+    "js-yaml": "^3.3.0",
+    "swagger-tools": "0.10.1"
   }
 }
