--- a/yaml/api_specification.yaml
+++ b/yaml/api_specification.yaml
@@ -1100,6 +1100,10 @@ definitions:
         description: "Array with the images of the event"
         items:
           type: "string"
+      related_author:
+        type: "integer"
+      related_book:
+        type: "integer"
     description: "An event, oc -.-"
   Order:
     type: "object"
