--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "connect": "^3.2.0",
+    "express": "^4.16.4",
     "jquery": "^3.4.1",
     "js-yaml": "^3.3.0",
     "pg": "^7.10.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "serve-static": "latest",
     "sha256": "^0.2.0",
     "swagger-tools": "^0.10.4"
