--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "pg": "^7.10.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "express-session": "^1.16.1",
+    "body-parser": "^1.19.0",
     "serve-static": "latest",
     "sha256": "^0.2.0",
     "swagger-tools": "^0.10.4"
