--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "express": "^4.16.4",
     "jquery": "^3.4.1",
     "js-yaml": "^3.3.0",
+    "passport-oauth": "^1.0.0",
+    "passport-oauth2-password-grant": "0.0.4",
+    "passport-oauth2-resource-owner-password": "^1.0.0",
     "pg": "^7.10.0",
-    "passport": "^0.4.0",
+    "passport": "latest",
     "passport-local": "^1.0.0",
     "express-session": "^1.16.1",
     "body-parser": "^1.19.0",
