Working on cart

--- a/public/assets/font-awesome/src/3.2.1/icons.yml
+++ b/public/assets/font-awesome/src/3.2.1/icons.yml
@@ -855,8 +855,8 @@ icons:
       - Web Application Icons
 
 
-  - name:       bar-chart
-    id:         bar-chart
+  - name:       bar-cart
+    id:         bar-cart
     unicode:    f080
     created:    1.0
     categories:
