--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "popper": "^1.0.1",
     "connect": "^3.2.0",
     "express": "^4.16.4",
     "jquery": "^3.4.1",
