Bugs and fixes. Plus minor cart updates.

--- a/yaml/api_specification.yaml
+++ b/yaml/api_specification.yaml
@@ -838,7 +838,7 @@ definitions:
       title:
         type: "string"
       author:
-        type: "string"
+        $ref: "#/definitions/Author"
       description:
         type: "string"
       publisher:
